# sample-app

./: Makefile  README.md
.github/workflows/: main.yml
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/component/container/: ParentContainer.vue
frontend/src/views/: HomeView.vue
infra/terraform/: .gitignore
infra/terraform/aws/: main.tf  variables.tf
infra/vm_podman_quadlet/ansible/: README.md  ansible.cfg  inventory.py  pyproject.toml
infra/vm_podman_quadlet/ansible/playbooks/: deploy-sample-app.yml  destroy-sample-app.yml
infra/vm_podman_quadlet/ansible/roles/sample_app/defaults/: main.yml
infra/vm_podman_quadlet/ansible/roles/sample_app/meta/: argument_specs.yml
infra/vm_podman_quadlet/ansible/roles/sample_app/tasks/: main.yml
infra/vm_podman_quadlet/ansible/roles/sample_app/templates/: sample-app-web-server.container.j2
infra/vm_podman_quadlet/ansible/roles/setup_podman/tasks/: main.yml
infra/vm_podman_quadlet/ansible/roles/setup_sample_app/defaults/: main.yml
infra/vm_podman_quadlet/ansible/roles/setup_sample_app/meta/: argument_specs.yml
infra/vm_podman_quadlet/ansible/roles/setup_sample_app/tasks/: destroy.yml  main.yml
infra/vm_podman_quadlet/ansible/roles/setup_sample_app/templates/: sample-app-web-server.container.j2
infra/vm_podman_quadlet/terraform/: .gitignore
infra/vm_podman_quadlet/terraform/aws/: .terraform.lock.hcl  .tflint.hcl  main.tf  variables.tf
server/: Containerfile  package-lock.json  package.json  server.js
