[project]
name = "sample-app-ansible"
version = "0.1.0"
description = "Ansible Codebase to manage the state of the servers hosting sample-app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.4.0",
    "ruff>=0.15.4",
]

[dependency-groups]
dev = [
    "ansible-dev-tools>=26.2.0",
    "ansible-lint>=26.3.0",
]
